--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "name": "readme-generator",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,6 +17,7 @@
   },
   "homepage": "https://github.com/ClaudioF9/Readme-Generator#readme",
   "dependencies": {
-    "inquirer": "^9.1.4"
-  }
+    "inquirer": "^8.0.0"
+  },
+  "description": ""
 }
